# test

./: .editorconfig  .gitattributes  .gitconfig  .gitignore  CLAUDE.md  EASTER_EGG_GAME.md  README.md  Win32Window.cs  docker-compose.e2e.yml  temp.yaml
.claude/: settings.local.json
.githooks/: commit-msg  config.sh  pre-commit  prepare-commit-msg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: api-container.yml  auto-author-assign.yml  backend-ci.yml  backend-container.yml  ci.yml  dependabot-update-dotnet-lockfiles.yml  deploy-cd-trigger.yml  deploy-cd.yml  enable-auto-merge.yml  frontend-ci.yml  frontend-container.yml  label.yml  playwright-ci.yml  playwright-env.yml  playwright.yml  poutine.yml  pr-e2e.yml  promotion-pull-request.yml  prune-ghcr.yml  pull-request-target-check.yml  release-drafter.yml  release.yml  (+9 more)
notepad/: README.md
notepad/src-tauri/: Cargo.toml  tauri.conf.json
notepad/src-tauri/capabilities/: default.json
notepad/src-tauri/src/: main.rs
notepad/src-tauri/windows/: hooks.nsi
pdf-qa-training/: .gitignore  MOCK_DATA_REMOVAL_SUMMARY.md  NORWEGIAN_LEGAL_IMPROVEMENTS.md  README.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  SOLUTION_SUMMARY.md  VENV_SETUP.md  check_section45.py  find_section39.py  improved_chunks.json  package.json  processed_chunks.json  requirements.txt  setup.bat  setup.ps1  setup.sh  setup_example.py  setup_norwegian_legal.py  test_processor.py  test_regex.py  test_section45_regex.py  test_subitems.py  training_data_template.json
scripts/: create_azure_credentials.azcli
(+356 files in other folders)
