[package]
name = "src-tauri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
window-vibrancy = "0.7"
zip = "2"
chrono = "0.4"
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
